syntax = "proto3";

package satellite.event.v1;

option go_package = "github.com/CityBear3/satellite/pb/event/v1;event";

import "google/protobuf/empty.proto";

service ArchiveEventService {
  rpc ReceiveEvent(google.protobuf.Empty) returns (stream ArchiveEvent) {}
}

message ArchiveEvent {
  string archive_event_id = 1;
}